2002-07-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (CaptureOneWindow):
	fixed a core dump w/ windows being destroyed during a recapture

2002-07-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	another click+drag fix

	* fvwm/move_resize.c (CMD_Resize):
	(moveLoop):
	* fvwm/builtins.c (CMD_StrokeFunc):
	* fvwm/focus.c (SetPointerEventPosition):
	* fvwm/functions.c (CheckActionType):
	* libs/Pointer.c (GetLocationFromEventOrQuery):
	fixed some bugs w/ pointer on wrong screen

2002-07-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (size_menu_horizontally):
	fixed menu style SubmenusLeft w/ icons in menu items

2002-07-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed problem moving the pointer off screen while moving a window
	(AnimatedMoveAnyWindow):
	fixed pointer warping w/ multiple screens and animated window motion
	(InteractiveMove):
	fixed interactive move starting point when pointer moved to different
	screen before the action starts

2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (WaitForButtonsUp):
	fixed handling of button release events

2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (paint_menu):
	removed redundant code

2002-07-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	send Map/UnmapNotify before iconyfying, not after

2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fake a MapNotify and then an UnmapNotify when a window is created iconic

	* fvwm/add_window.c (AddWindow):
	workaround for buggy TK menu positioning

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed WarpToWindow with unmanaged windows

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	ClickToFocus + ClickToFocusPassesClickOff now blocks event handling
	until the button is released again; this restores the old behaviour