@@ -1,3 +1,9 @@
+2002-07-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/fvwmsignal.c (fvwmSelect):
+	call alloca(0) in fvwmSelect to make sure the memory is not leaked in
+	modules
+
 2002-07-21  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (CaptureOneWindow):
